# ftrace

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  justfile
doc/: questions.md
resources/generate-syscalls/: Dockerfile  a.sh  generate_syscalls.sh  syscalls_from_tbl.py
resources/generate_syscalls/: package.json  tsconfig.json
resources/generate_syscalls/src/: constants.ts  index.ts  ripgrep.ts  ripgrep.types.ts  types.ts
src/: analysis.rs  cli.rs  fs.rs  macros.rs  main.rs  parse.rs  printer.rs  ptrace_utils.rs  strace.pest  syscall.json  syscall.rs  syscalls.json  utf8.rs
src/parse/: mod.rs  strace_line.rs  strace_token.rs  string.rs  timestamp.rs
