[package]
authors = ["acheronfail <acheronfail@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "ftrace - trace files and paths"
edition = "2018"
homepage = "https://github.com/acheronfail/ftrace"
repository = "https://github.com/acheronfail/ftrace"
keywords = ["strace", "syscall", "trace", "file", "fs"]
license = "Unlicense OR MIT OR Apache-2.0"
name = "ftrace"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
clap = "3.0.0-beta.2"
easy_collections = "0.3.2"
flexi_logger = "0.17.1"
hex = "0.4.2"
lazy_static = "1.4.0"
log = "0.4.14"
nom = "6.1.0"
pest = "2.1.3"
pest_derive = "2.1.0"
termcolor = "1.1.2"
which = "4.0.2"
