[package]
authors = ["acheronfail <acheronfail@gmail.com>"]
categories = ["command-line-utilities", "text-processing"]
description = "ftrace - trace files and paths"
edition = "2018"
homepage = "https://github.com/acheronfail/ftrace"
repository = "https://github.com/acheronfail/ftrace"
keywords = ["strace", "syscall", "trace", "file", "fs"]
license = "Unlicense OR MIT OR Apache-2.0"
name = "ftrace"
version = "0.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
nix = "0.26.2"
owo-colors = "3.5.0"
serde_json = "1.0.94"
